--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "future-frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "test:unit": "vue-cli-service test:unit",
+    "dev": "vite"
   },
   "dependencies": {
     "vue": "^3.2.6",
@@ -12,12 +13,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/test-utils": "^2.0.0-0",
     "autoprefixer": "^10.3.2",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7",
     "typescript": "^4.3.2",
     "vite": "^2.5.1",
+    "vue-jest": "^5.0.0-0",
     "vue-tsc": "^0.2.2"
   }
 }
