--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "serve": "vite preview",
     "build": "vue-tsc --noEmit && vite build",
     "test:unit": "vue-cli-service test:unit",
-    "dev": "vite"
+    "dev": "vite",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.2.6",
