--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "vue": {
     "configureWebpack": {
       "devServer": {
-        "headers": { "Access-Control-Allow-Origin": "*" }
+        "headers": {
+          "Access-Control-Allow-Origin": "*"
+        }
       }
     }
   }
