--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@types/node": "^16.7.10",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.5",
