Updated nginx.conf to allow cors

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,7 @@ http {
       try_files $uri $uri/ /index.html;
     }
     location /api/* {
+        add_header 'Access-Control-Allow-Origin' '*';
         proxy_pass http://future.eastus2.azurecontainer.io;
     }
     error_page   500 502 503 504  /50x.html;
