--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
     }
     location /api/* {
         add_header 'Access-Control-Allow-Origin' '*';
-        proxy_pass http://future.eastus2.azurecontainer.io;
+        proxy_pass localhost:4000;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
