--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ node_js:
 script: npm run test
 
 after_success:
+  - ./login.sh
   - echo "$DockerPassword" | docker login --username "$DockerUsername" --password-stdin; docker build . -t blzface/future-of-security-frontend
   - echo "$DockerPassword" | docker login --username "$DockerUsername" --password-stdin; docker push blzface/future-of-security-frontend
