--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.4.1",
+    "@heroicons/vue": "^1.0.4",
     "@types/node": "^16.7.10",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
