--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
+sudo: required
+dist: trusty
 language: node_js
-
 node_js:
   - node
-
+python:
+  - "3.4"
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      # nodejs >v4 compiler requirements
+      - g++-4.8
+      - openjdk-7-jdk
+before_install:
+  - sudo apt-get -y install python3-pip python-dev
+  - sudo pip3 install -U setuptools
+  - sudo pip3 install -U virtualenvwrapper
+  - python3 -V
+  - pip3 -V
+install:
+  - npm install
 script: npm run test
 
 after_success:
